# apple/Sources/OSRM/Models/VoiceInstruction.swift
@@ -1,0 +1,38 @@
+//
+// VoiceInstruction.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct VoiceInstruction: Codable, Hashable {
+    public var distanceAlongGeometry: Double?
+    public var announcement: String?
+    public var ssmlAnnouncement: String?
+
+    public init(distanceAlongGeometry: Double? = nil, announcement: String? = nil, ssmlAnnouncement: String? = nil) {
+        self.distanceAlongGeometry = distanceAlongGeometry
+        self.announcement = announcement
+        self.ssmlAnnouncement = ssmlAnnouncement
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case distanceAlongGeometry
+        case announcement
+        case ssmlAnnouncement
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(distanceAlongGeometry, forKey: .distanceAlongGeometry)
+        try container.encodeIfPresent(announcement, forKey: .announcement)
+        try container.encodeIfPresent(ssmlAnnouncement, forKey: .ssmlAnnouncement)
+    }
+}
